# gitfs

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile.test  MODULE.bazel  README.md  build.rs  clippy.toml  formula.rb  install.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: archibald-architect.md  donnie-docs.md  testy-tanisha.md  threaded-tommy.md
.cursor/: hooks.json
.github/workflows/: agentblame.yml  bench.yml  ci.yml  integration-tests.yml  promote-to-latest.yml  python-lint.yml  release.yml  shellcheck.yml  test-install.yml
bench/: __init__.py  __main__.py  benchmarks.clj  dsl.clj  fixture.py  sample.py  ui.py  util.py
crates/git-fs/: Cargo.toml  LICENSE.txt  README.md
crates/git-fs/src/: commit_worker.rs  domain.rs  main.rs  mesafs.rs  mesafuse.rs  ssfs.rs  util.rs
crates/mesa-dev/: Cargo.toml  README.md
crates/mesa-dev/src/: client.rs  error.rs  http_client.rs  lib.rs  pagination.rs
crates/mesa-dev/src/backends/: mod.rs  reqwest_client.rs  ureq_client.rs
crates/mesa-dev/src/models/: commit.rs  common.rs  content.rs  diff.rs  mod.rs  pagination.rs
crates/mesa-dev/src/resources/: admin.rs  branches.rs  commits.rs  content.rs  diffs.rs  mod.rs  repos.rs
docs/plans/: 2025-02-10-async-mescloud-icache.md  2026-02-03-update-checker.md  2026-02-04-mount-directory-interlock.md  2026-02-05-homebrew-tap-formula.md  2026-02-06-decouple-dcache-icb.md  2026-02-06-default-run-subcommand.md  2026-02-09-async-icache-resolver.md  2026-02-09-mesa-dev-migration.md  2026-02-09-shellcheck-workflow.md  2026-02-10-composite-fs-dedup.md  2026-02-10-file-table.md  2026-02-10-pr31-async-icache-bug-review.md  2026-02-10-pr31-bug-review.md  2026-02-10-readdir-icache-caching.md  2026-02-10-resolver-as-data-provider.md  2026-02-10-split-async-contains.md
lib/: BUILD.bazel  drop_ward.rs  ignore_tracker.rs  io.rs  lib.rs
lib/cache/: async_backed.rs  fcache.rs  mod.rs  traits.rs
lib/cache/eviction/: lru.rs  mod.rs
lib/fs/: async_fs.rs  bridge.rs  composite.rs  dcache.rs  fuser.rs  indexed_lookup_cache.rs  mod.rs
lib/sync/: atomic.rs  mod.rs
src/: BUILD.bazel  app_config.rs  daemon.rs  fuse_check.rs  main.rs  onboarding.rs  term.rs  trc.rs  updates.rs
src/fs/: cache_tracker.rs  fuser.rs  local.rs  mod.rs  trait.rs  write_through.rs
src/fs/dcache/: dcache.rs  mescloud.rs  mod.rs  table.rs
src/fs/icache/: async_cache.rs  bridge.rs  cache.rs  file_table.rs  inode_factory.rs  mod.rs
src/fs/mescloud/: common.rs  composite.rs  dcache.rs  icache.rs  mod.rs  org.rs  repo.rs  roots.rs
tests/: BUILD.bazel  __init__.py  async_backed_correctness.rs  async_fs_concurrency_tests.rs  async_fs_correctness.rs  async_fs_rename_tests.rs  async_fs_unlink_tests.rs  async_fs_write_tests.rs  bridge_tests.rs  composite_fs_tests.rs  conftest.py  dcache_correctness.rs  dcache_ignore_tests.rs  drop_ward_tests.rs  fcache_concurrent.rs  fcache_correctness.rs  ignore_tracker_tests.rs  lru_concurrent.rs  lru_correctness.rs  test_directory_layout.py  test_git_bench_flush.py
tests/common/: async_fs_mocks.rs  composite_mocks.rs  mod.rs
tests/docker/: Dockerfile  config.toml  entrypoint.sh
