[package]
name = "git-fs"
version = "0.1.1-alpha.1"
edition = "2024"
description = "Mount Mesa, GitHub and Gitlab repositories as local filesystems via FUSE"
license = "MIT"
repository = "https://github.com/mesa-dot-dev/git-fs"
authors = ["Marko Vejnovic <marko@mesa.dev>"]

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
fuser = { version = "0.16.0", features = ["libfuse"] }
libc = "0.2"
mesa-dev = "0.1.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["release_max_level_debug"] }
rand = "0.9.2"
rustc-hash = "2.1.1"
scc = "3.4.16"
base64 = "0.22"
nix = { version = "0.29.0", features = ["mount"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
dirs = "6.0.0"
futures = "0.3"
daemonize = "0.5.0"
thiserror = "2.0.18"
bitflags = "2.10.0"
async-trait = "0.1.89"
bytes = "1.11.0"
bytesize = { version = "2.3.1", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
bimap = "0.6.3"
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
semver = "1.0"
inquire = "0.9.2"

[build-dependencies]
vergen-gitcl = { version = "1", features = [] }

[lints.rust]
unsafe_code                = "allow"
missing_docs               = "warn"
unreachable_pub            = "allow"
unused_qualifications      = "warn"
elided_lifetimes_in_paths  = "warn"
non_ascii_idents           = "forbid"
keyword_idents_2024        = "forbid"
let_underscore_drop        = "warn"
trivial_numeric_casts      = "warn"
unused_import_braces       = "warn"
variant_size_differences   = "warn"

[lints.clippy]
all      = { level = "deny",  priority = -1 }
pedantic = { level = "warn",  priority = -1 }
nursery  = { level = "warn",  priority = -1 }
cargo    = { level = "warn",  priority = -1 }

# Pedantic exceptions
module_name_repetitions = "allow"
missing_errors_doc      = "allow"

# Nursery exceptions
missing_const_for_fn         = "allow"
significant_drop_tightening  = "allow"
option_if_let_else           = "allow"

# Cargo exceptions
multiple_crate_versions = "allow"
cargo_common_metadata   = "allow"

# Cherry-picked restriction lints
allow_attributes                  = "warn"
clone_on_ref_ptr                  = "warn"
create_dir                        = "warn"
dbg_macro                         = "warn"
empty_enum_variants_with_brackets = "warn"
error_impl_error                  = "warn"
exit                              = "warn"
expect_used                       = "warn"
format_push_string                = "warn"
if_then_some_else_none            = "warn"
infinite_loop                     = "warn"
mem_forget                        = "warn"
missing_assert_message            = "warn"
mutex_atomic                      = "warn"
print_stderr                      = "allow"
print_stdout                      = "allow"
rest_pat_in_fully_bound_structs   = "warn"
self_named_module_files           = "warn"
str_to_string                     = "warn"
todo                              = "warn"
undocumented_unsafe_blocks        = "warn"
unimplemented                     = "warn"
unnecessary_safety_comment        = "warn"
unused_result_ok                  = "warn"
unused_trait_names                = "warn"
unwrap_used                       = "warn"
wildcard_enum_match_arm           = "warn"

[package.metadata.deb]
maintainer = "Marko Vejnovic <marko@mesa.dev>"
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/git-fs", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/git-fs/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/git-fs", dest = "/usr/bin/git-fs", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/git-fs/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
fuse3 = "*"
