[project]
name = "git-fs-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "testcontainers>=4.14.1",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["T201"]
"tests/*" = [
    "S", # It's tests, no need for security
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["main.py", "tests"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
