[project]
name = "git-fs"
version = "0.1.0"
description = "Mount Mesa, GitHub and Gitlab repositories as local filesystems via FUSE"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "testcontainers>=4.14.1",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S", # It's tests, no need for security
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["tests"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
