"""Build target for the git-fs library crate."""

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "git_fs_lib",
    srcs = glob(["**/*.rs"]),
    crate_name = "git_fs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:bitflags",
        "@crates//:bytes",
        "@crates//:fuser",
        "@crates//:futures",
        "@crates//:hashlink",
        "@crates//:libc",
        "@crates//:rustc-hash",
        "@crates//:scc",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)
