[package]
name = "git-fs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
fuser = { version = "0.16.0", features = ["libfuse"] }
libc = "0.2"
mesa-dev = { path = "../mesa-dev", features = ["reqwest-client"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
rand = "0.9.2"
rustc-hash = "2.1.1"
scc = "3.4.16"
base64 = "0.22"
nix = "0.29.0"
