[package]
name = "git-fs"
version = "0.1.0"
edition = "2024"
description = "Mount GitHub repositories as local filesystems via FUSE — no cloning required"
license = "MIT"
repository = "https://github.com/mesa-dot-dev/git-fs"
authors = ["Mesa <eng@mesa.dev>"]

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
fuser = { version = "0.16.0", features = ["libfuse"] }
libc = "0.2"
mesa-dev = { path = "../mesa-dev", features = ["reqwest-client"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
rand = "0.9.2"
rustc-hash = "2.1.1"
scc = "3.4.16"
base64 = "0.22"

[package.metadata.deb]
maintainer = "Mesa <eng@mesa.dev>"
section = "utility"
priority = "optional"
depends = "libfuse3-3"
assets = [
    ["target/release/git-fs", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/git-fs/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/git-fs", dest = "/usr/bin/git-fs", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/git-fs/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
fuse3 = "*"
