[package]
name = "mesa-dev"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for the mesa.dev API"

[lints]
workspace = true

[features]
default = ["reqwest-client"]
reqwest-client = ["dep:reqwest"]
ureq-client = ["dep:ureq"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
http = "1"
bytes = "1"

reqwest = { version = "0.12", features = ["json"], optional = true }
ureq = { version = "3", optional = true }
